--- a/.prettierrc.json
+++ b/.prettierrc.json
@@ -1,6 +1,6 @@
 {
     "semi": true,
-    "trailingComma": "all",
+    "trailingComma": "es5",
     "printWidth": 120,
     "tabWidth": 4,
     "endOfLine": "auto"
