--- a/tsconfig.json
+++ b/tsconfig.json
@@ -12,8 +12,10 @@
     "strict": true,
     "strictNullChecks": true,
     "alwaysStrict": true,
-    "noUnusedLocals": true,
-    "noUnusedParameters": true,
+    "noUnusedLocals": false,
+    "noUnusedParameters": false,
+    "noImplicitAny": false,
+    "resolveJsonModule": true,
     "noImplicitReturns": true,
     "noFallthroughCasesInSwitch": true,
     "moduleResolution": "node",
@@ -22,6 +24,10 @@
     "skipLibCheck": true,
     "forceConsistentCasingInFileNames": true
   },
+  "files": [
+    "config.ts",
+    "package.json"
+  ],
   "include": [
     "src/"
   ],
